--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,11 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+  --primary-red: #901c1c;
+  --primary-orange: #d3573c;
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --secondary-orange: #d3573c;
+  --secondary-light-grey: #fafafa;
+  --seconday-grey: #525252;
+  --secondary-red: #901c1c;
 }
