--- a/src/components/Headers/IndexHeader/IndexHeader.module.css
+++ b/src/components/Headers/IndexHeader/IndexHeader.module.css
@@ -3,11 +3,11 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 1rem;
 }
 
 .title {
   font-weight: 400;
   color: var(--primary-red);
-  font-size: 36px;
+  font-size: 2.25rem;
 }
