--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 
   --secondary-orange: #d3573c;
   --secondary-light-grey: #fafafa;
-  --seconday-grey: #525252;
+  --secondary-grey: #525252;
   --secondary-red: #901c1c;
 }
 
