--- a/src/components/CustomSelect/CustomSelect.module.css
+++ b/src/components/CustomSelect/CustomSelect.module.css
@@ -1,3 +1,7 @@
+:root {
+  --select-max-height: 4.3rem;
+}
+
 .container {
   display: flex;
   flex-direction: row;
@@ -5,6 +9,7 @@
   font-weight: 700;
   font-size: 1.125rem;
   width: fit-content;
+  overflow: visible;
 }
 
 .label {
@@ -15,6 +20,8 @@
   background-color: var(--primary-red);
   color: white;
   width: 10rem;
+  position: relative;
+  height: var(--select-max-height);
   border-radius: 0.3125rem;
 }
 
@@ -27,12 +34,16 @@
   cursor: pointer;
   padding-left: 1rem;
   padding-right: 0.5rem;
-  height: 4.3rem;
+  height: 100%;
 }
 
 .customArrow {
   width: 2rem;
   height: 2rem;
+}
+
+.openSelect {
+  border-radius: 0.3125rem 0.3125rem 0 0;
 }
 
 .arrowOpen {
@@ -44,6 +55,11 @@
   list-style: none;
   padding-left: 1rem;
   padding-right: 1rem;
+  position: absolute;
+  top: 100%;
+  z-index: 100;
+  background-color: var(--primary-red);
+  border-radius:  0 0 0.3125rem 0.3125rem;
 }
 
 .option {
