fix: height / width issue on video component

--- a/src/components/Modals/LightboxModal/LightboxModal.module.css
+++ b/src/components/Modals/LightboxModal/LightboxModal.module.css
@@ -31,3 +31,8 @@
   width: auto;
   max-height: calc(var(--max-lightbox-height) - var(--title-offset));
 }
+
+.video {
+  width: auto;
+  max-height: calc(var(--max-lightbox-height) - var(--title-offset));
+}
