--- a/src/components/MediaGallery/MediaGalleryContent/MediaGalleryContent.module.css
+++ b/src/components/MediaGallery/MediaGalleryContent/MediaGalleryContent.module.css
@@ -12,6 +12,7 @@
   object-fit: cover;
   aspect-ratio: calc(350 / 300);
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .legend {
@@ -28,6 +29,7 @@
   flex-direction: row;
   align-items: center;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .loader {
